<?xml version="1.0"?>
<package format="3">
    <name>elevation_mapping_cupy</name>
    <version>2.0.0</version>
    <description>The elevation mapping on GPU</description>
    <maintainer email="2689112371@qq.com">Henning He</maintainer>
    <license>BSD-3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>tf2</depend>
    <!-- <depend>tf_conversions</depend> -->
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>grid_map_msgs</depend>
    <depend>elevation_map_msgs</depend>
    <depend>grid_map_ros</depend>
    <depend>image_transport</depend>
    <depend>pcl_ros</depend>
    <depend>pybind11_vendor</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
